--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <DOCTYPE! HTML>
 <html>
-<title> <head> Tommy </head> </title>
+<center>
+<title>Tommy</title>
 <body>
 <h1> Tommy Donald </h1>
 <br>
 <h2> Hi </h2>
 </body>
+  </center>
 </html>
